--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -15,6 +15,12 @@
     display: inline-block;
 }
 
+@media (min-width: 768px){
+    .custom-input {
+        width: 350px !important;
+    }
+}
+
 
 /* Absolute Center Spinner */
 
