--- a/resources/views/filter.edge
+++ b/resources/views/filter.edge
@@ -1,14 +1,24 @@
 <div class="row">
-    <div class="col-md-12" style="margin-bottom:15px;">
+
         <form class="form-inline">
-            <div class="form-group">
-                <label>URL</label>
-                <input type="text" class="form-control" style="width:350px" ng-model="filter.link" ng-keypress="myEnter($event)" />
+            <div class="col-md-4" style="margin-bottom:15px;">
+                <div class="form-group">
+                    <label>Note &nbsp;</label>
+                    <input type="text" class="form-control custom-input" ng-model="filter.note" ng-keypress="myEnter($event)" />
+                </div>
             </div>
-            <div class="form-group">
-                <button type="button" class="btn btn-info" ng-click="search()"><span class="glyphicon glyphicon-search"></span> Search</button>
-                <button type="button" class="btn btn-danger" ng-click="reset()"><span class="glyphicon glyphicon-remove"></span> Reset</button>
+            <div class="col-md-4" style="margin-bottom:15px;">
+                <div class="form-group">
+                    <label>URL &nbsp;</label>
+                    <input type="text" class="form-control custom-input" ng-model="filter.link" ng-keypress="myEnter($event)" />
+                </div>
+            </div>
+            <div class="col-md-4 text-center" style="margin-bottom:15px;">
+                <div class="form-group">
+                    <button type="button" class="btn btn-info" ng-click="search()"><span class="glyphicon glyphicon-search"></span> Search</button>
+                    <button type="button" class="btn btn-danger" ng-click="reset()"><span class="glyphicon glyphicon-remove"></span> Reset</button>
+                </div>
             </div>
         </form>
-    </div>
+
 </div>
