--- a/resources/views/form.edge
+++ b/resources/views/form.edge
@@ -123,10 +123,16 @@
                         </select>
                     </div>
                 </div>
-                <div class="col-md-12">
+                <div class="col-md-6">
                     <div class="form-group">
                         <label><input type="checkbox" ng-model="customBox" /> Custom Time <a href="javascript:void(0)" id="guide-schedule">(Guide)</a></label>
                         <input type="text" ng-model="schedule.time" class="form-control" ng-disabled="!customBox" />
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <label>Note</label>
+                        <input type="text" ng-model="schedule.note" class="form-control" />
                     </div>
                 </div>
 
