--- a/resources/views/list.edge
+++ b/resources/views/list.edge
@@ -14,7 +14,7 @@
 <body ng-app="MegaSchedule">
     <div class="container-fuild" ng-controller="ScheduleController">
         <div class="row" style="margin:15px 0px" ng-cloak>
-            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+            <div class="col-xs-12 col-sm-9 col-md-9 col-lg-9">
                 <div class="panel panel-danger">
                     <div class="panel-heading">
                         <h3 class="panel-title">
@@ -80,7 +80,7 @@
                 </div>
             </div>
 
-            <!--<div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
+            <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
                 <div class="panel panel-success">
                     <div class="panel-heading">
                         <h3 class="panel-title">
@@ -91,23 +91,27 @@
                         <span class="pull-right clickable"><i class="glyphicon glyphicon-chevron-up"></i></span>
                     </div>
                     <div class="panel-body">
-
+                        <div class="alert alert-info alert-dismissible" role="alert" ng-repeat="item in runs track by $index">
+                            <strong>[{summarizeDateTime(item.runTime, true)}]</strong> -
+                            <a href="[{item.runLink}]" target="_blank">[{item.runLink}]</a>
+                        </div>
+                        <div class="alert alert-warning alert-dismissible" role="alert" ng-show="runs.length == 0">
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                            <strong>Warning!</strong> No links are scheduled...
+                        </div>
                     </div>
                 </div>
-            </div> -->
+            </div>
         </div>
     </div>
     {{ script('/js/jquery.min.js') }}
     {{ script('/js/bootstrap.min.js') }}
     {{ script('/js/angular.min.js') }}
     {{ script('/js/angular-sanitize.min.js') }}
-    {{ script('/js/script.js') }}
-
-    <!-- for websocket
     {{ script('/js/polyfill.min.js') }}
     {{ script('/js/Ws.browser.min.js') }}
-    {{ script('/js/activity.js') }}
-    -->
+    {{ script('/js/script.js') }}
+
     <div class="loading" style="display: none">
         <div class="cssload-loading"><i></i><i></i><i></i><i></i></div>
     </div>
