--- a/resources/views/list.edge
+++ b/resources/views/list.edge
@@ -93,7 +93,7 @@
                     <div class="panel-body">
                         <div class="alert alert-info alert-dismissible" role="alert" ng-repeat="item in runs track by $index">
                             <strong>[{summarizeDateTime(item.runTime, true)}]</strong> -
-                            <a href="[{item.runLink}]" target="_blank">[{item.runLink}]</a>
+                            <a href="[{item.runLink}]" target="_blank" style="word-break: break-all;">[{item.runLink}]</a>
                         </div>
                         <div class="alert alert-warning alert-dismissible" role="alert" ng-show="runs.length == 0">
                             <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
