--- a/resources/views/list.edge
+++ b/resources/views/list.edge
@@ -110,6 +110,7 @@
     {{ script('/js/angular-sanitize.min.js') }}
     {{ script('/js/polyfill.min.js') }}
     {{ script('/js/Ws.browser.min.js') }}
+    {{ script('/js/cronstrue.min.js') }}
     {{ script('/js/script.js') }}
 
     <div class="loading" style="display: none">
