--- a/resources/views/list.edge
+++ b/resources/views/list.edge
@@ -30,11 +30,11 @@
                             <table class="table table-hover table-bordered no-margin-bottom">
                                 <thead>
                                     <tr>
-                                        <th class="col-md-1 text-center vertical-align">Index</th>
+                                        <th class="text-center vertical-align" style="width: 5%">Index</th>
                                         <th class="col-md-3 text-center vertical-align">Note</th>
                                         <th class="col-md-4 text-center vertical-align">Time / URL</th>
-                                        <th class="col-md-2 text-center vertical-align">Create | Update</th>
-                                        <th class="col-md-2 text-center vertical-align">
+                                        <th class="col-md-1 text-center vertical-align">Create<br />Update</th>
+                                        <th class="col-md-3 text-center vertical-align">
                                             <button type="button" class="btn btn-sm btn-primary" ng-click="showForm()">
                                                 <span class="glyphicon glyphicon-plus"></span> Add New
                                             </button>
@@ -54,8 +54,11 @@
                                             <label class="label label-default block-item">[{summarizeDateTime(item.updated_at, true)}]</label>
                                         </td>
                                         <td class="vertical-align text-center">
-                                            <button type="button" class="btn btn-sm btn-warning" ng-click="log(item)" title="Log Item">
+                                            <button type="button" class="btn btn-sm btn-default" ng-click="log(item)" title="Log Item">
                                                 <span class="glyphicon glyphicon-list-alt"></span>
+                                            </button>
+                                            <button type="button" class="btn btn-sm btn-warning" ng-click="clone(item)" title="Clone Item">
+                                                <span class="glyphicon glyphicon-book"></span>
                                             </button>
                                             <button type="button" class="btn btn-sm btn-success" ng-click="edit(item)" title="Edit Item">
                                                 <span class="glyphicon glyphicon-pencil"></span>
